--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,323 @@
-/* место для вашего кода */
+header {
+  display: grid;
+  grid-template-columns: 1.51fr min-content 1.5fr;
+  align-items: center;
+  padding: 92px 51px 96px;
+}
+.header__logo {
+  display: block;
+  width: 134px;
+  height: 104px;
+}
+.address {
+  justify-self: end;
+  text-underline-offset: 3px;
+  font-size: 18px;
+  line-height: 1.35;
+  margin-right: 35px;
+  font-family: Raleway, serif;
+  font-weight: 400;
+}
+address {
+  font-style: normal;
+}
+
+.header__links-list {
+  display: flex;
+  margin-top: 9px;
+  align-items: center;
+  list-style: circle;
+  gap: 33px;
+}
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link_active {
+  text-decoration: none;
+  font-family: Raleway;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.13px;
+}
+
+.header__link {
+  font-family: Raleway;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.13px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 183px;
+}
+.cover {
+  background-image: url(../images/cover.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 157px 50px 50px 50px;
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+.cover__title {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 100px;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+  line-height: 1.15;
+}
+
+.aligned-text {
+  display: block;
+  margin-top: 10px;
+}
+
+.aligned-text_center {
+  display: block;
+  line-height: 1;
+  text-align: center;
+}
+
+.aligned-text_right {
+  display: block;
+  line-height: 1;
+  text-align: right;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+  letter-spacing: normal;
+}
+
+.cover__description {
+  display: flex;
+  position: relative;
+  z-index: 1;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 78px;
+  padding: 136px 0 0;
+}
+
+.cover__description-text {
+  color: #fff;
+  font-size: 22px;
+  line-height: 1.27;
+  text-transform: uppercase;
+  word-spacing: 19px;
+}
+
+.bet-button {
+  border: 1px #fff solid;
+  padding: 12px 32px;
+  color: #fff;
+  font-family: "Raleway", sans-serif;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 1;
+  text-transform: uppercase;
+  background-color: transparent;
+}
+
+.lots {
+  width: 1052px;
+  padding-inline: 24px;
+  margin: 0 auto;
+}
+
+.lots__heading {
+  padding: 0 0 35px 15px;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 1;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+  z-index: 1;
+}
+
+.lots__card-list-item {
+  min-width: 334px;
+  min-height: 563px;
+  position: relative;
+  list-style-type: none;
+}
+
+.card-link {
+  text-decoration: none;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.card__title {
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 1.2;
+  text-decoration-line: underline;
+  text-transform: uppercase;
+  color: #fff;
+  position: relative;
+  z-index: 1;
+}
+
+.card__text {
+  font-size: 20px;
+  line-height: 1.2;
+  color: #fff;
+  position: relative;
+  z-index: 1;
+  text-decoration: none;
+}
+
+.card {
+  width: 100%;
+  height: 100%;
+  padding: 48px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.lots__look-more-link {
+  display: block;
+  margin: 28px 0 0 17px;
+  font-size: 20px;
+  text-decoration-line: underline;
+  text-underline-position: under;
+}
+
+.about {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 24px;
+  padding-left: 20px;
+  padding-right: 20px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.about__column {
+  justify-self: center;
+}
+
+.column__about_text {
+  grid-column: 2/4;
+  width: 694px;
+  padding-top: 5px;
+}
+
+.about__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  background-color: #000000;
+}
+
+.about__logo-image {
+  width: 148px;
+}
+
+.about__title {
+  padding: 100px 0 104px;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 1;
+  text-transform: uppercase;
+}
+
+.about__text {
+  display: flex;
+  flex-direction: column;
+  gap: 29px;
+}
+
+.about__text p {
+  font-size: 20px;
+  line-height: normal;
+  word-spacing: 1px;
+}
+
+.footer {
+  display: flex;
+  padding: 186px 50px 80px;
+  justify-content: space-between;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.footer__menu-list {
+  text-align: center;
+  list-style: none;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__menu-link {
+  font-size: 18px;
+  line-height: normal;
+  text-underline-position: under;
+}
+
+.footer__social-list {
+  display: flex;
+  gap: 48px;
+  list-style: none;
+}
+
+.footer__social-icon {
+  width: auto;
+  height: 48px;
+}
+
+
+  
